tests/snapshots/cli__add_all_fields.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Processing 2 package(s)...
  ✓ Added: lodash@4.17.20
  ✓ Added: express@4.18.0
[INFO] Adding 2 signature(s)...
[INFO] Adding 1 payload file(s)...
[INFO] Adding 1 workflow path(s)...


=== Threat Summary ===

Name:        complete-attack
Date:        2025-01-01
Packages:    2
CVE:         CVE-2025-12345
Description: Attack with all fields

Packages:
  • express@4.18.0
  • lodash@4.17.20

Signatures:
  • atob(
  • eval(

Payload Files:
  • malicious.js

Workflow Paths:
  • .github/workflows/publish.yml


✓ Threat saved successfully!
File: complete-attack.ect
