tests/snapshots/cli__add_invalid_package.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Processing 1 package(s)...
  ✗ Invalid package format: Format must be: package@version


=== Threat Summary ===

Name:        bad-package
Date:        2025-01-01
Packages:    0
Description: Test with invalid package


✓ Threat saved successfully!
File: bad-package.ect
