tests/snapshots/cli__add_minimal_with_package.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Processing 1 package(s)...
  ✓ Added: lodash@4.17.20


=== Threat Summary ===

Name:        minimal
Date:        2025-01-01
Packages:    1
Description: Minimal attack

Packages:
  • lodash@4.17.20


✓ Threat saved successfully!
File: minimal.ect
