tests/snapshots/cli__add_missing_required_fields.snap
---
source: tests/cli.rs
expression: normalized
---
=== STDOUT ===

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)


=== STDERR ===
Error: --name is required
