tests/snapshots/cli__add_multiple_payloads.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Adding 3 payload file(s)...


=== Threat Summary ===

Name:        multi-payload
Date:        2025-01-01
Packages:    0
Description: Multiple payloads

Payload Files:
  • install.sh
  • postinstall.js
  • setup.js


✓ Threat saved successfully!
File: multi-payload.ect
