tests/snapshots/cli__add_multiple_signatures.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Adding 3 signature(s)...


=== Threat Summary ===

Name:        multi-signature
Date:        2025-01-01
Packages:    0
Description: Multiple signatures

Signatures:
  • atob(
  • eval(Buffer.from(
  • require('child_process')


✓ Threat saved successfully!
File: multi-signature.ect
