tests/snapshots/cli__add_single_package.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Processing 1 package(s)...
  ✓ Added: lodash@4.17.20


=== Threat Summary ===

Name:        test-package-attack
Date:        2025-01-01
Packages:    1
Description: Test with package

Packages:
  • lodash@4.17.20


✓ Threat saved successfully!
File: test-package-attack.ect
