tests/snapshots/cli__add_single_payload.snap
---
source: tests/cli.rs
expression: normalized
---

=== Add New Threat ===

[INFO] Non-interactive mode (using provided args)

[INFO] Adding 1 payload file(s)...


=== Threat Summary ===

Name:        payload-test
Date:        2025-01-01
Packages:    0
Description: Test with payload

Payload Files:
  • malicious-setup.js


✓ Threat saved successfully!
File: payload-test.ect
